2008-11-28  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Add hilon-fm-2 to the deps.

	* src/Makefile.am:
	* src/hd-background-dialog.c (deleted):
	* src/hd-background-dialog.h (deleted):
	* src/hd-change-background-dialog.c (added):
	* src/hd-change-background-dialog.h (added): Implement the new UI of the
	  change background dialog.

	* src/hd-hildon-home-dbus.c: Fix grabs and ungrabs.

2008-11-28  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update entry.

	* src/hd-add-bookmark-dialog.c (hd_add_bookmark_dialog_init): Use a
	pixbuf and a text cell renderer to also display the bookmark icon.

	* src/hd-add-task-dialog.c (hd_add_task_dialog_init): Use a pixbuf and
	a text cell renderer to also display the task icon.

2008-11-28  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-manager.c (HD_KEY_FILE_DESKTOP_KEY_TRANSLATION_DOMAIN):
	Use X-Text-Domain.

2008-11-27  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog.

2008-11-27  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-applet-manager.c (items_configuration_loaded_cb): Only show
	  not yet selected applets in dialog.
	  (delete_event_cb): Remove applet from configuration if it is closed,
	  which means removed from Home.
	  (plugin_added_cb, plugin_removed_cb, run_idle, hd_applet_manager_init,
	  hd_applet_manager_install_applet, hd_applet_manager_remove_applet):
	  Use only one plugin manager to load applets and manage the applets
	  on Home.
	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu): Only
	  show menu item if list of applets is not empty.
	* src/hildon-home.c (load_plugins_idle, main): Move plugin manager to
	  load applets to HDAppletManager.

2008-11-26  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-shortcut.c (hd_task_shortcut_init): Update layout.

2008-11-26  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Increase version.
